--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -443,6 +443,17 @@ input:checked + .slider:before {
   color: var(--color-volvox);
 }
 
+
+/**** Devextreme ****/
+.dx-editor-outlined {
+  border-color: #ced4da;
+  height: 38px;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.dx-selectbox.dx-state-hover, .dx-texteditor.dx-state-focused {
+  border-color: var(--color-volvox) !important;
+}
+
 @media screen and (max-width: 991px) {
   #themeToggler {
     display: none;
