--- a/src/Volvox.Helios.Web/Views/Moderation/NewPunishment.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/NewPunishment.cshtml
@@ -12,7 +12,7 @@
                 <thead>
                     <tr>
                         <td>Punishment Type</td>
-                        <td>Duration (mins)</td>
+                        <td>Duration (mins, Empty = Forever) </td>
                         <td>Warning Type</td>
                         <td>Warning Threshold</td>
                         <td>Role</td>
